--- a/Customer_churn_analysis/template/home.html
+++ b/Customer_churn_analysis/template/home.html
@@ -4,88 +4,112 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+table.dataframe, .dataframe th, .dataframe td {
+  border: none;
+  border-bottom: 1px solid #C8C8C8;
+  border-collapse: collapse;
+  text-align:left;
+  padding: 10px;
+  margin-bottom: 40px;
+  font-size: 0.9em;
+  color: #FFFFFF;
+}  
+.heading { color: #FFFFFF;}  
+body {
+
+    padding:0px;
+    margin:20px;
+    background:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+    background-size:auto;
+    width:100vw;
+    height:100vh;
+    
+   
+}
+
+</style>
+
 </head>
    <body>
       <title>Churn Prediction</title>
 	  <div class="container">
-		<div class="row">
-
-		  <form action="http://localhost:5000/" method="POST">
+		<form action="http://localhost:5000/" method="POST">
 		  	<div class="col-sm-9">
 			 <div class="form-group  purple-border">
-				  <label for="comment">SeniorCitizen:</label>
+				  <label for="comment" class='heading'>SeniorCitizen:</label>
 				  <textarea class="form-control" rows="2" id="query1" name="query1" rows="2" cols="5" autofocus>{{query1}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">MonthlyCharges:</label>
+				  <label for="comment" class='heading'>MonthlyCharges:</label>
 				  <textarea class="form-control" rows="2" id="query2" name="query2" rows="2" cols="5" autofocus>{{query2}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">TotalCharges:</label>
+				  <label for="comment" class='heading'>TotalCharges:</label>
 				  <textarea class="form-control" rows="2" id="query3" name="query3" rows="2" cols="5" autofocus>{{query3}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">gender:</label>
+				  <label for="comment" class='heading'>gender:</label>
 				  <textarea class="form-control" rows="2" id="query4" name="query4" rows="2" cols="5" autofocus>{{query4}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">Partner:</label>
+				  <label for="comment" class='heading'>Partner:</label>
 				  <textarea class="form-control" rows="2" id="query5" name="query5" rows="2" cols="5" autofocus>{{query5}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">Dependents:</label>
+				  <label for="comment" class='heading'>Dependents:</label>
 				  <textarea class="form-control" rows="2" id="query6" name="query6" rows="2" cols="5" autofocus>{{query6}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">PhoneService:</label>
+				  <label for="comment" class='heading'>PhoneService:</label>
 				  <textarea class="form-control" rows="2" id="query7" name="query7" rows="2" cols="5" autofocus>{{query7}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">MultipleLines:</label>
+				  <label for="comment" class='heading'>MultipleLines:</label>
 				  <textarea class="form-control" rows="2" id="query8" name="query8" rows="2" cols="5" autofocus>{{query8}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">InternetService:</label>
+				  <label for="comment" class='heading'>InternetService:</label>
 				  <textarea class="form-control" rows="2" id="query9" name="query9" rows="2" cols="5" autofocus>{{query9}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">OnlineSecurity:</label>
+				  <label for="comment" class='heading'>OnlineSecurity:</label>
 				  <textarea class="form-control" rows="2" id="query10" name="query10" rows="2" cols="5" autofocus>{{query10}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">OnlineBackup:</label>
+				  <label for="comment" class='heading'>OnlineBackup:</label>
 				  <textarea class="form-control" rows="2" id="query11" name="query11" rows="2" cols="5" autofocus>{{query11}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">DeviceProtection:</label>
+				  <label for="comment" class='heading'>DeviceProtection:</label>
 				  <textarea class="form-control" rows="2" id="query12" name="query12" rows="2" cols="5" autofocus>{{query12}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">TechSupport:</label>
+				  <label for="comment" class='heading'>TechSupport:</label>
 				  <textarea class="form-control" rows="2" id="query13" name="query13" rows="2" cols="5" autofocus>{{query13}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">StreamingTV:</label>
+				  <label for="comment" class='heading'>StreamingTV:</label>
 				  <textarea class="form-control" rows="2" id="query14" name="query14" rows="2" cols="5" autofocus>{{query14}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">StreamingMovies:</label>
+				  <label for="comment" class='heading'>StreamingMovies:</label>
 				  <textarea class="form-control" rows="2" id="query15" name="query15" rows="2" cols="5" autofocus>{{query15}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">Contract:</label>
+				  <label for="comment" class='heading'>Contract:</label>
 				  <textarea class="form-control" rows="2" id="query16" name="query16" rows="2" cols="5" autofocus>{{query16}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">PaperlessBilling:</label>
+				  <label for="comment" class='heading'>PaperlessBilling:</label>
 				  <textarea class="form-control" rows="2" id="query17" name="query17" rows="2" cols="5" autofocus>{{query17}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">PaymentMethod:</label>
+				  <label for="comment" class='heading'>PaymentMethod:</label>
 				  <textarea class="form-control" rows="2" id="query18" name="query18" rows="2" cols="5" autofocus>{{query18}}</textarea>
 			</div>
 			<div class="form-group  purple-border">
-				  <label for="comment">tenure:</label>
+				  <label for="comment" class='heading'>tenure:</label>
 				  <textarea class="form-control" rows="2" id="query19" name="query19" rows="2" cols="5" autofocus>{{query19}}</textarea>
 			</div>
 			</div>
@@ -95,12 +119,12 @@
 		  </form>
 		  </div>
 		  
-		<div class="row"> 
+		
 			<div class="col-sm-9">
 			<textarea class="form-control" rows="2" id="comment" name="query6" rows="2" cols="5" autofocus>{{output1}}</textarea>
 			<textarea class="form-control" rows="2" id="comment" name="query7" rows="2" cols="5" autofocus>{{output2}}</textarea>
 			</div>
-		</div>
+		
 	</div>		
    </body>
 </html>
